--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
     <h2>I <3 my Hackspace</h2>
     <p>ICAH all day, everyday</p>
 
+    <img
+    src="https://www.google.com/url?sa=i&rct=j&q=&esrc=s&source=images&cd=&cad=rja&uact=8&ved=2ahUKEwin_JfSjqrgAhXkA2MBHYgQBCIQjRx6BAgBEAU&url=https%3A%2F%2Funsplash.com%2Fsearch%2Fphotos%2Fcandy&psig=AOvVaw2L_ER12b9gCKar0BI138ao&ust=1549645809673923" alt="sweets"
+
     <a href="https://www.imperial.ac.uk/advanced-hackspace/">Hackspace Webpage</a>
     </body>
     </html>
