--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <p>ICAH all day, everyday</p>
 
     <img
-    src="https://images.unsplash.com/photo-1526541588356-01de54d1ea1b?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&w=1000&q=80" alt="sweets"
+    src="https://images.unsplash.com/photo-1526541588356-01de54d1ea1b?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&w=1000&q=80" 
 
     <a href="https://www.imperial.ac.uk/advanced-hackspace/">Hackspace Webpage</a>
     </body>
