--- a/index.html
+++ b/index.html
@@ -65,9 +65,8 @@
     <div class="container">
       <div class="row">
         <div class="col-lg-8 mx-auto">
-          <h2 class="text-white mb-4">Built with Bootstrap 4</h2>
-          <p class="text-white-50">Grayscale is a free Bootstrap theme created by Start Bootstrap. It can be yours right now, simply download the template on
-            <a href="http://startbootstrap.com/template-overviews/grayscale/">the preview page</a>. The theme is open source, and you can use it for any purpose, personal or commercial.</p>
+          <h2 class="text-white mb-4">About Our Product</h2>
+          <p class="text-white-50">To infuse and flavour gin normally takes around 3 days, making it a slow and expensive process. Our machine reduces this time to a mere 2 minutes. Numerous stages are used to imitate a chemistry set-up and add to the user experience. A variety of flavours are available, with syringes being used to administer the syrup to enhance the user experience and further induce the illusion of a chemistry experiment. This allows bars to offer more flavours of gin at minimal extra cost. The use of copper and glass mimics the aesthetic of a traditional gin distillery, making the device an attractive addition to any bar.</p>
         </div>
       </div>
       <img src="img/ipad.png" class="img-fluid" alt="">
