--- a/index.html
+++ b/index.html
@@ -147,8 +147,8 @@
         <div class="card border-0 shadow">
           <img src="https://source.unsplash.com/TMgQMXoglsM/500x350" class="card-img-top" alt="...">
           <div class="card-body text-center">
-            <h5 class="card-title mb-0">Team Member</h5>
-            <div class="card-text text-black-50">Web Developer</div>
+            <h5 class="card-title mb-0">Zoe Hall</h5>
+            <div class="card-text text-black-50">Mechanical Engineer</div>
           </div>
         </div>
       </div>
@@ -157,8 +157,8 @@
         <div class="card border-0 shadow">
           <img src="https://source.unsplash.com/9UVmlIb0wJU/500x350" class="card-img-top" alt="...">
           <div class="card-body text-center">
-            <h5 class="card-title mb-0">Team Member</h5>
-            <div class="card-text text-black-50">Web Developer</div>
+            <h5 class="card-title mb-0">Ross Unwin</h5>
+            <div class="card-text text-black-50">Mechanical Engineer</div>
           </div>
         </div>
       </div>
@@ -167,8 +167,8 @@
         <div class="card border-0 shadow">
           <img src="https://source.unsplash.com/sNut2MqSmds/500x350" class="card-img-top" alt="...">
           <div class="card-body text-center">
-            <h5 class="card-title mb-0">Team Member</h5>
-            <div class="card-text text-black-50">Web Developer</div>
+            <h5 class="card-title mb-0">Piers de Basto</h5>
+            <div class="card-text text-black-50">Electronics Engineer</div>
           </div>
         </div>
       </div>
@@ -177,8 +177,8 @@
         <div class="card border-0 shadow">
           <img src="https://source.unsplash.com/ZI6p3i9SbVU/500x350" class="card-img-top" alt="...">
           <div class="card-body text-center">
-            <h5 class="card-title mb-0">Team Member</h5>
-            <div class="card-text text-black-50">Web Developer</div>
+            <h5 class="card-title mb-0">Diffy</h5>
+            <div class="card-text text-black-50">Biomedical Scientist</div>
           </div>
         </div>
       </div>
