--- a/index.html
+++ b/index.html
@@ -132,6 +132,7 @@
     </div>
   </section>
 
+  <section id="ourteam">
   <!-- Header -->
   <header class="bg-primary text-center py-5 mb-4">
     <div class="container">
