--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@
               <i class="fas fa-map-marked-alt text-primary mb-2"></i>
               <h4 class="text-uppercase m-0">Address</h4>
               <hr class="my-4">
-              <div class="small text-black-50">4923 Market Street, Orlando FL</div>
+              <div class="small text-black-50">City Of London Distillery, 22-24 Bride Ln, London, EC4Y 8DT</div>
             </div>
           </div>
         </div>
@@ -213,7 +213,7 @@
               <h4 class="text-uppercase m-0">Email</h4>
               <hr class="my-4">
               <div class="small text-black-50">
-                <a href="#">hello@yourdomain.com</a>
+                <a href="#">customer_service@ginfuser.com</a>
               </div>
             </div>
           </div>
@@ -225,7 +225,7 @@
               <i class="fas fa-mobile-alt text-primary mb-2"></i>
               <h4 class="text-uppercase m-0">Phone</h4>
               <hr class="my-4">
-              <div class="small text-black-50">+1 (555) 902-8832</div>
+              <div class="small text-black-50">020 1234 5678</div>
             </div>
           </div>
         </div>
@@ -249,7 +249,7 @@
   <!-- Footer -->
   <footer class="bg-black small text-center text-white-50">
     <div class="container">
-      Copyright &copy; Your Website 2019
+      Copyright &copy; (Gin)fusion 2019
     </div>
   </footer>
 
