--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
             <a class="nav-link js-scroll-trigger" href="#ourteam">Our Team</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="#signup">Contact Us</a>
+            <a class="nav-link js-scroll-trigger" href="#contact">Contact Us</a>
           </li>
         </ul>
       </div>
@@ -190,7 +190,7 @@
   <!-- /.container -->
 
   <!-- Contact Section -->
-  <section class="contact-section bg-black">
+  <section id="contact" class="contact-section bg-black">
     <div class="container">
 
       <div class="row">
