--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
   <!-- Navigation -->
   <nav class="navbar navbar-expand-lg navbar-light fixed-top" id="mainNav">
     <div class="container">
-      <a class="navbar-brand js-scroll-trigger" href="#page-top">Start Gin-fusing</a>
+      <a class="navbar-brand js-scroll-trigger" href="#page-top">(GIN)FUSION</a>
       <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
         Menu
         <i class="fas fa-bars"></i>
@@ -36,10 +36,10 @@
       <div class="collapse navbar-collapse" id="navbarResponsive">
         <ul class="navbar-nav ml-auto">
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="#about">About</a>
+            <a class="nav-link js-scroll-trigger" href="#about">About Us</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="#projects">Projects</a>
+            <a class="nav-link js-scroll-trigger" href="#product">Our Product</a>
           </li>
           <li class="nav-item">
             <a class="nav-link js-scroll-trigger" href="#ourteam">Our Team</a>
@@ -76,7 +76,19 @@
     </div>
   </section>
 
-  <!-- Projects Section -->
+  <!-- Product Section -->
+  <section id="product" class="product-section text-center">
+    <div class="container">
+      <div class="row">
+        <div class="col-lg-8 mx-auto">
+          <h2 class="text-white mb-4">About Our Product</h2>
+          <p class="text-white-50">To infuse and flavour gin normally takes around 3 days, making it a slow and expensive process. Our machine reduces this time to a mere 2 minutes. Numerous stages are used to imitate a chemistry set-up and add to the user experience. A variety of flavours are available, with syringes being used to administer the syrup to enhance the user experience and further induce the illusion of a chemistry experiment. This allows bars to offer more flavours of gin at minimal extra cost. The use of copper and glass mimics the aesthetic of a traditional gin distillery, making the device an attractive addition to any bar.</p>
+        </div>
+      </div>
+      <img src="img/ipad.png" class="img-fluid" alt="">
+    </div>
+  </section>
+
   <section id="projects" class="projects-section bg-light">
     <div class="container">
 
