--- a/index.html
+++ b/index.html
@@ -78,15 +78,17 @@
 
   <!-- Product Section -->
   <section id="product" class="product-section text-center">
-    <div class="container">
-      <div class="row">
-        <div class="col-lg-8 mx-auto">
-          <h2 class="text-black mb-0">About Our Product</h2>
-          <p class="text-black-50">To infuse and flavour gin normally takes around 3 days, making it a slow and expensive process. Our machine reduces this time to a mere 2 minutes. Numerous stages are used to imitate a chemistry set-up and add to the user experience. A variety of flavours are available, with syringes being used to administer the syrup to enhance the user experience and further induce the illusion of a chemistry experiment. This allows bars to offer more flavours of gin at minimal extra cost. The use of copper and glass mimics the aesthetic of a traditional gin distillery, making the device an attractive addition to any bar.</p>
+    <header class="bg-primary text-center py-5 mb-4">
+      <div class="container">
+        <div class="row">
+          <div class="col-lg-8 mx-auto">
+            <h2 class="text-black mb-0">About Our Product</h2>
+            <p class="text-black-50">To infuse and flavour gin normally takes around 3 days, making it a slow and expensive process. Our machine reduces this time to a mere 2 minutes. Numerous stages are used to imitate a chemistry set-up and add to the user experience. A variety of flavours are available, with syringes being used to administer the syrup to enhance the user experience and further induce the illusion of a chemistry experiment. This allows bars to offer more flavours of gin at minimal extra cost. The use of copper and glass mimics the aesthetic of a traditional gin distillery, making the device an attractive addition to any bar.</p>
+          </div>
         </div>
+        <img src="img/ipad.png" class="img-fluid" alt="">
       </div>
-      <img src="img/ipad.png" class="img-fluid" alt="">
-    </div>
+    </header>
   </section>
 
   <section id="projects" class="projects-section bg-light">
