--- a/index.html
+++ b/index.html
@@ -68,8 +68,8 @@
     <div class="container">
       <div class="row">
         <div class="col-lg-8 mx-auto">
-          <h2 class="text-white mb-4">About Our Product</h2>
-          <p class="text-white-50">To infuse and flavour gin normally takes around 3 days, making it a slow and expensive process. Our machine reduces this time to a mere 2 minutes. Numerous stages are used to imitate a chemistry set-up and add to the user experience. A variety of flavours are available, with syringes being used to administer the syrup to enhance the user experience and further induce the illusion of a chemistry experiment. This allows bars to offer more flavours of gin at minimal extra cost. The use of copper and glass mimics the aesthetic of a traditional gin distillery, making the device an attractive addition to any bar.</p>
+          <h2 class="text-white mb-4">About Us</h2>
+          <p class="text-white-50">We are a group of engineers and scientists who wanted to change the way people drink Gin. Gin is an increasinly popular drink of choice, with the distilleries using copper and glass to create a sophisticated atmosphere. Our vision was to bring the distillery experience to a bar, but without the long waiting times.</p>
         </div>
       </div>
       <img src="img/ipad.png" class="img-fluid" alt="">
@@ -82,7 +82,7 @@
       <div class="container">
         <div class="row">
           <div class="col-lg-8 mx-auto">
-            <h2 class="text-black mb-0">About Our Product</h2>
+            <h2 class="font-weight-light text-white">About Our Product</h2>
           </div>
         </div>
       </div>
