--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
   </section>
 
   <!-- Product Section -->
-  <section id="product" class="product-section text-center">
+  <section id="product" class="product-section text-center bg-light">
     <header class="bg-primary text-center py-5 mb-4">
       <div class="container">
         <div class="row">
@@ -89,7 +89,7 @@
     </header>
     <div class="container">
       <div class="row">
-        <div class="col-xl-8 col-lg-7">
+        <div class="col-lg-8 mx-auto">
           <p class="text-black-50">To infuse and flavour gin normally takes around 3 days, making it a slow and expensive process. Our machine reduces this time to a mere 2 minutes. Numerous stages are used to imitate a chemistry set-up and add to the user experience. A variety of flavours are available, with syringes being used to administer the syrup to enhance the user experience and further induce the illusion of a chemistry experiment. This allows bars to offer more flavours of gin at minimal extra cost. The use of copper and glass mimics the aesthetic of a traditional gin distillery, making the device an attractive addition to any bar.</p>
         </div>
       </div>
