--- a/index.html
+++ b/index.html
@@ -46,6 +46,8 @@
           </li>
           <li class="nav-item">
             <a class="nav-link js-scroll-trigger" href="#contact">Contact Us</a>
+          <li class="nav-item">
+            <a class="nav-link js-scroll-trigger" href="#websites">Websites</a>
           </li>
         </ul>
       </div>
@@ -271,6 +273,26 @@
       Copyright &copy; (Gin)fusion 2019
     </div>
   </footer>
+
+  <!-- Websites Section -->
+  <section id="websites" class="websites-section text-center bg-light">
+    <header class="bg-primary text-center py-5 mb-4">
+      <div class="container">
+        <div class="row">
+          <div class="col-lg-8 mx-auto">
+            <h2 class="font-weight-light text-white">Websites</h2>
+          </div>
+        </div>
+      </div>
+    </header>
+    <div class="container">
+      <div class="row">
+        <div class="col-lg-8 mx-auto">
+          <p class="text-black-50">Add in an FAQs section to copy in my answers to the questions given</p>
+        </div>
+      </div>
+    </div>
+  </section>
 
   <!-- Bootstrap core JavaScript -->
   <script src="vendor/jquery/jquery.min.js"></script>
