--- a/index.html
+++ b/index.html
@@ -298,7 +298,7 @@
           <div class="panel panel-default ">
               <div class="panel-heading accordion-toggle question-toggle collapsed" data-toggle="collapse" data-parent="#faqAccordion" data-target="#question0">
                    <h4 class="panel-title">
-                      <a href="#" class="ing">Q: What is Lorem Ipsum?</a>
+                      <a href="#" class="ing">Q: What do you feel makes a good website?</a>
                 </h4>
 
               </div>
@@ -314,7 +314,7 @@
           <div class="panel panel-default ">
               <div class="panel-heading accordion-toggle collapsed question-toggle" data-toggle="collapse" data-parent="#faqAccordion" data-target="#question1">
                    <h4 class="panel-title">
-                      <a href="#" class="ing">Q: Why do we use it?</a>
+                      <a href="#" class="ing">Q: What is accessability and what considerations should you make for it?</a>
                 </h4>
 
               </div>
@@ -329,7 +329,7 @@
           <div class="panel panel-default ">
               <div class="panel-heading accordion-toggle collapsed question-toggle" data-toggle="collapse" data-parent="#faqAccordion" data-target="#question2">
                    <h4 class="panel-title">
-                      <a href="#" class="ing">Q: Where does it come from?</a>
+                      <a href="#" class="ing">Q: What is GDPR and what considerations should be made for privacy on your website?</a>
                 </h4>
 
               </div>
@@ -344,7 +344,22 @@
           <div class="panel panel-default ">
               <div class="panel-heading accordion-toggle collapsed question-toggle" data-toggle="collapse" data-parent="#faqAccordion" data-target="#question3">
                    <h4 class="panel-title">
-                      <a href="#" class="ing">Q: Where can I get some?</a>
+                      <a href="#" class="ing">Q: What marketing steps would you take to drive people to look at your website?</a>
+                </h4>
+
+              </div>
+              <div id="question3" class="panel-collapse collapse" style="height: 0px;">
+                  <div class="panel-body">
+                       <h5><span class="label label-primary">Answer</span></h5>
+
+                      <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable. If you are going to use a passage of Lorem Ipsum, you need to be sure there isn't anything embarrassing hidden in the middle of text. </p>
+                  </div>
+              </div>
+          </div>
+          <div class="panel panel-default ">
+              <div class="panel-heading accordion-toggle collapsed question-toggle" data-toggle="collapse" data-parent="#faqAccordion" data-target="#question3">
+                   <h4 class="panel-title">
+                      <a href="#" class="ing">Q: What are the next steps you would take given more time for your product website - how would you expand and what steps would you take?</a>
                 </h4>
 
               </div>
