--- a/index.html
+++ b/index.html
@@ -44,7 +44,14 @@
             <a class="nav-link js-scroll-trigger" href="#ourteam">Our Team</a>
           </li>
           <li class="nav-item">
+            <a class="nav-link js-scroll-trigger" href="#toolsused">Tools Used</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link js-scroll-trigger" href="#domain">Domain</a>
+          </li>
+          <li class="nav-item">
             <a class="nav-link js-scroll-trigger" href="#contact">Contact Us</a>
+          </li>
           <li class="nav-item">
             <a class="nav-link js-scroll-trigger" href="#websites">Websites</a>
           </li>
@@ -208,6 +215,46 @@
 
   </div>
   <!-- /.container -->
+
+  <!-- Tools Used Section -->
+  <section id="toolsused" class="product-section text-center bg-light">
+    <header class="bg-primary text-center py-5 mb-4">
+      <div class="container">
+        <div class="row">
+          <div class="col-lg-8 mx-auto">
+            <h2 class="font-weight-light text-white">The Tools Used To Make This Website</h2>
+          </div>
+        </div>
+      </div>
+    </header>
+    <div class="container">
+      <div class="row">
+        <div class="col-lg-8 mx-auto">
+          <p class="text-black-50">To infuse and flavour gin normally takes around 3 days, making it a slow and expensive process. Our machine reduces this time to a mere 2 minutes. Numerous stages are used to imitate a chemistry set-up and add to the user experience. A variety of flavours are available, with syringes being used to administer the syrup to enhance the user experience and further induce the illusion of a chemistry experiment. This allows bars to offer more flavours of gin at minimal extra cost. The use of copper and glass mimics the aesthetic of a traditional gin distillery, making the device an attractive addition to any bar.</p>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <!-- Domain Section -->
+  <section id="domain" class="product-section text-center bg-light">
+    <header class="bg-primary text-center py-5 mb-4">
+      <div class="container">
+        <div class="row">
+          <div class="col-lg-8 mx-auto">
+            <h2 class="font-weight-light text-white">Registering and Setting-up a Domain Name</h2>
+          </div>
+        </div>
+      </div>
+    </header>
+    <div class="container">
+      <div class="row">
+        <div class="col-lg-8 mx-auto">
+          <p class="text-black-50">To infuse and flavour gin normally takes around 3 days, making it a slow and expensive process. Our machine reduces this time to a mere 2 minutes. Numerous stages are used to imitate a chemistry set-up and add to the user experience. A variety of flavours are available, with syringes being used to administer the syrup to enhance the user experience and further induce the illusion of a chemistry experiment. This allows bars to offer more flavours of gin at minimal extra cost. The use of copper and glass mimics the aesthetic of a traditional gin distillery, making the device an attractive addition to any bar.</p>
+        </div>
+      </div>
+    </div>
+  </section>
 
   <!-- Contact Section -->
   <section id="contact" class="contact-section bg-black">
