--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
       <div class="row">
         <div class="col-lg-8 mx-auto">
           <h2 class="text-white mb-4">About Us</h2>
-          <p class="text-white-50">We are a group of engineers and scientists who wanted to change the way people drink Gin. Gin is an increasinly popular drink of choice, with the distilleries using copper and glass to create a sophisticated atmosphere. Our vision was to bring the distillery experience to a bar, but without the long waiting times.</p>
+          <p class="text-white-50">We are a group of engineers and scientists who wanted to change the way people drink Gin. Gin is an increasingly popular drink of choice, with the distilleries using copper and glass to create a sophisticated atmosphere. Our vision was to bring the distillery experience to a bar, but without the long waiting times.</p>
         </div>
       </div>
       <img src="img/ipad.png" class="img-fluid" alt="">
