--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
         <div class="card border-0 shadow">
           <img src="https://source.unsplash.com/TMgQMXoglsM/500x350" class="card-img-top" alt="...">
           <div class="card-body text-center">
-            <h5 class="card-title mb-0">Zoe Hall</h5>
+            <h5 class="card-title mb-0">Ross Unwin</h5>
             <div class="card-text text-black-50">Mechanical Engineer</div>
           </div>
         </div>
@@ -185,7 +185,7 @@
         <div class="card border-0 shadow">
           <img src="https://source.unsplash.com/9UVmlIb0wJU/500x350" class="card-img-top" alt="...">
           <div class="card-body text-center">
-            <h5 class="card-title mb-0">Ross Unwin</h5>
+            <h5 class="card-title mb-0">Zoe Hall</h5>
             <div class="card-text text-black-50">Mechanical Engineer</div>
           </div>
         </div>
@@ -205,7 +205,7 @@
         <div class="card border-0 shadow">
           <img src="https://source.unsplash.com/ZI6p3i9SbVU/500x350" class="card-img-top" alt="...">
           <div class="card-body text-center">
-            <h5 class="card-title mb-0">Diffy</h5>
+            <h5 class="card-title mb-0">Amy Smith</h5>
             <div class="card-text text-black-50">Biomedical Scientist</div>
           </div>
         </div>
