--- a/index.html
+++ b/index.html
@@ -114,8 +114,8 @@
         </div>
         <div class="col-xl-4 col-lg-5">
           <div class="featured-text text-center text-lg-left">
-            <h4>Shoreline</h4>
-            <p class="text-black-50 mb-0">Grayscale is open source and MIT licensed. This means you can use it for any project - even commercial projects! Download it, customize it, and publish your website!</p>
+            <h4>Rotational Motion</h4>
+            <p class="text-black-50 mb-0">The flavour syrup is contained in syringes in the main compartment of the machine. These syringes rotate according to the flavour combination chosen. This rotational motion is achieved using a stepper motor to ensure an appropriate level of accuracy is achieved. This mechanism is contained within the product’s casing to ensure nothing can get caught in it during use, meaning it is safe to have on the bar top.</p>
           </div>
         </div>
       </div>
@@ -129,8 +129,8 @@
           <div class="bg-black text-center h-100 project">
             <div class="d-flex h-100">
               <div class="project-text w-100 my-auto text-center text-lg-left">
-                <h4 class="text-white">Misty</h4>
-                <p class="mb-0 text-white-50">An example of where you can put an image of a project, or anything else, along with a description.</p>
+                <h4 class="text-white">Linear Motion</h4>
+                <p class="mb-0 text-white-50">Another motor is implemented to extract the syrup, which is achieved by forcing a weight to push down on the syringes. This uses a screw thread that spins to moves a pusher up and down according to which flavours are required.</p>
                 <hr class="d-none d-lg-block mb-0 ml-0">
               </div>
             </div>
@@ -147,8 +147,8 @@
           <div class="bg-black text-center h-100 project">
             <div class="d-flex h-100">
               <div class="project-text w-100 my-auto text-center text-lg-right">
-                <h4 class="text-white">Mountains</h4>
-                <p class="mb-0 text-white-50">Another example of a project with its respective description. These sections work well responsively as well, try this theme on a small screen!</p>
+                <h4 class="text-white">Cooling System</h4>
+                <p class="mb-0 text-white-50">Finally, the tonic water is cooled by the tubing it flows through being submerged in an ice bath. This means no ice is necessary in the drink itself, resulting in a cold beverage that doesn’t become diluted over time.</p>
                 <hr class="d-none d-lg-block mb-0 mr-0">
               </div>
             </div>
@@ -354,7 +354,7 @@
           <div class="panel panel-default ">
               <div class="panel-heading accordion-toggle collapsed question-toggle" data-toggle="collapse" data-parent="#faqAccordion" data-target="#question1">
                    <h4 class="panel-title">
-                      <a href="#" class="ing">Q: What is accessability and what considerations should you make for it?</a>
+                      <a href="#" class="ing">Q: What is accessibility and what considerations should you make for it?</a>
                 </h4>
 
               </div>
