--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
       <!-- Featured Project Row -->
       <div class="row align-items-center no-gutters mb-4 mb-lg-5">
         <div class="col-xl-4 col-lg-5">
-          <div class="text-center featured-text text-lg-right">
+          <div class="text-center featured-text text-right-lg">
             <h4>Pumping Section</h4>
             <p class="text-black-50 mb-0">The gin and tonic water are moved around the machine using pumps and silicone tubing. The end of the tubing can simply be placed into the bottles and the precise amount of fluid will be transferred to the glass. This ensures accurate pouring, reducing the costs of wastage and spillage in bars. Using silicone tubing allows consumers to watch the fluid move through the system without using a breakable material, meaning a safer bar-top system.</p>
           </div>
