--- a/index.html
+++ b/index.html
@@ -243,7 +243,7 @@
     <div class="container">
       <div class="row">
         <div class="col-lg-8 mx-auto">
-          <p class="text-black-50">To infuse and flavour gin normally takes around 3 days, making it a slow and expensive process. Our machine reduces this time to a mere 2 minutes. Numerous stages are used to imitate a chemistry set-up and add to the user experience. A variety of flavours are available, with syringes being used to administer the syrup to enhance the user experience and further induce the illusion of a chemistry experiment. This allows bars to offer more flavours of gin at minimal extra cost. The use of copper and glass mimics the aesthetic of a traditional gin distillery, making the device an attractive addition to any bar.</p>
+          <p class="text-black-50">To make this website the following applications were used: Atom, Github and Safari. The website code was written in Atom, using some helpful snippets and templates from startbootstrap.com and other similar sources. Github was used as a way to run the code and view it in Safari to consider the web view. It also allowed for comments and descriptions to be left on each change made, which meant a more organised design process. Finally, Safari was used to decide what details needed changing and easily navigate to the correct part of the code to edit. It also allowed the website to be viewed on different device screen sizes, to ensure adaptability and usability. </p>
         </div>
       </div>
     </div>
