domain name info

--- a/index.html
+++ b/index.html
@@ -263,7 +263,7 @@
     <div class="container">
       <div class="row">
         <div class="col-lg-8 mx-auto">
-          <p class="text-black-50">To infuse and flavour gin normally takes around 3 days, making it a slow and expensive process. Our machine reduces this time to a mere 2 minutes. Numerous stages are used to imitate a chemistry set-up and add to the user experience. A variety of flavours are available, with syringes being used to administer the syrup to enhance the user experience and further induce the illusion of a chemistry experiment. This allows bars to offer more flavours of gin at minimal extra cost. The use of copper and glass mimics the aesthetic of a traditional gin distillery, making the device an attractive addition to any bar.</p>
+          <p class="text-black-50">The first step is to choose a domain name, which requires checking the availability online using websites such as Google Domains and Go Daddy. Once a free domain name has been chosen, it must be registered. This involves giving relevant information that is required by the Internet Corporation for Assigned Names and Numbers, which is the governing body for domain names. If false information is entered, the domain name can be cancelled. To set it up a web host is required, and this is normally who the domain name is registered through. A monthly plan must be chosen with the host and then a website can be published online.</p>
         </div>
       </div>
     </div>
