--- a/index.html
+++ b/index.html
@@ -295,9 +295,7 @@
               <div id="question0" class="panel-collapse collapse" style="height: 0px;">
                   <div class="panel-body">
                        <h5><span class="label label-primary">Answer</span></h5>
-
-                      <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five <a href="http://jquery2dotnet.com/" class="label label-success">http://jquery2dotnet.com/</a> centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.
-                          </p>
+                      <p>A good website should be easy to navigate and understand. This means a clear layout and not too much information in a small space or it becomes hard to follow. The order of pages should make logical sense and all pages should have links to each other. Aesthetics are also extremely important as the font, text colour and size must be suitable for the images and background used so that all text is legible. Finally, a good website should guide the users’ eyes to the key points and images to ensure it delivers all the important information it needs to.</p>
                   </div>
               </div>
           </div>
