--- a/index.html
+++ b/index.html
@@ -310,7 +310,7 @@
                   <div class="panel-body">
                        <h5><span class="label label-primary">Answer</span></h5>
 
-                      <p>It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed to using 'Content here, content here', making it look like readable English. Many desktop publishing packages and web page editors now use Lorem Ipsum as their default model text, and a search for 'lorem ipsum' will uncover many web sites still in their infancy. Various versions have evolved over the years, sometimes by accident, sometimes on purpose (injected humour and the like).</p>
+                      <p>Accessibility is the design of products, devices, services or environments for people with disabilities. For websites, this means ensuring there are no barriers that prevent interaction with, or access to, websites on the World Wide Web by people with disabilities. Methods of achieving this include: alternative text for images, keyboard input for users who cannot use the mouse, transcripts for audio, enlarging text and removing flashing content. There are a large number of sources online that give further recommendations and so this should be consulted for any content that isn’t covered by the general considerations mentioned above.</p>
                   </div>
               </div>
           </div>
