--- a/index.html
+++ b/index.html
@@ -341,7 +341,8 @@
                   <div class="panel-body">
                        <h5><span class="label label-primary">Answer</span></h5>
 
-                      <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable. If you are going to use a passage of Lorem Ipsum, you need to be sure there isn't anything embarrassing hidden in the middle of text. </p>
+                      <p>To successfully market my website there are a number of options. Firstly, search engine optimisation, which is the process of optimising pages with keywords and phrases that people are likely to search. This means that the websites visibility in search engines’ organic results in increased. Another similar technique is to pay to be advertised at the top of a search engine’s page, known as paying per click. Furthermore, a targeting cookie can be placed on viewers’ computers to show advertisements of the website once they leave the page. However, because of GDPR and the recent changes, users must be given the opportunity to consent to the cookie. In continuation, paying for advertising slots on social media, such as Facebook and YouTube. Finally, customer satisfaction will increase the number of people looking at the website. This means that the first customers may just be the most important because if the first review is negative then no new customers will want to buy from the company.
+                      </p>
                   </div>
               </div>
           </div>
