--- a/index.html
+++ b/index.html
@@ -324,7 +324,6 @@
               <div id="question2" class="panel-collapse collapse" style="height: 0px;">
                   <div class="panel-body">
                        <h5><span class="label label-primary">Answer</span></h5>
-
                       <p>GDPR is the EU General Data Protection Regulation. There have been some key changes recently, including: the conditions for consent have been strengthened; users must be notified about a breach within 72 hours of the breach being discovered; users have a right to know if data concerning them is being processed, where and what for; if a user so chooses it then all their personal information must be erased; data protection must be included from the beginning of designing a system; and data protection officers (DPO) are required to keep an internal record. For this website, if any information was asked for then a clear message asking for consent and detailing the terms and conditions would be necessary. This should then be organised by a DPO and it should be possible to erase a single person’s data from the system upon request, which means it should be easy for someone to request the removal of their personal data. Finally, an alert system should be set up to allow users to be contacted if there is a breach of data.
                       </p>
                   </div>
@@ -340,24 +339,25 @@
               <div id="question3" class="panel-collapse collapse" style="height: 0px;">
                   <div class="panel-body">
                        <h5><span class="label label-primary">Answer</span></h5>
-
                       <p>To successfully market my website there are a number of options. Firstly, search engine optimisation, which is the process of optimising pages with keywords and phrases that people are likely to search. This means that the websites visibility in search engines’ organic results in increased. Another similar technique is to pay to be advertised at the top of a search engine’s page, known as paying per click. Furthermore, a targeting cookie can be placed on viewers’ computers to show advertisements of the website once they leave the page. However, because of GDPR and the recent changes, users must be given the opportunity to consent to the cookie. In continuation, paying for advertising slots on social media, such as Facebook and YouTube. Finally, customer satisfaction will increase the number of people looking at the website. This means that the first customers may just be the most important because if the first review is negative then no new customers will want to buy from the company.
                       </p>
                   </div>
               </div>
           </div>
+
           <div class="panel panel-default ">
-              <div class="panel-heading accordion-toggle collapsed question-toggle" data-toggle="collapse" data-parent="#faqAccordion" data-target="#question3">
+              <div class="panel-heading accordion-toggle collapsed question-toggle" data-toggle="collapse" data-parent="#faqAccordion" data-target="#question4">
                    <h4 class="panel-title">
                       <a href="#" class="ing">Q: What are the next steps you would take given more time for your product website - how would you expand and what steps would you take?</a>
                 </h4>
 
               </div>
-              <div id="question3" class="panel-collapse collapse" style="height: 0px;">
+              <div id="question4" class="panel-collapse collapse" style="height: 0px;">
                   <div class="panel-body">
                        <h5><span class="label label-primary">Answer</span></h5>
 
-                      <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable. If you are going to use a passage of Lorem Ipsum, you need to be sure there isn't anything embarrassing hidden in the middle of text. </p>
+                      <p>With more time, I would add a section to allow purchasing of the product online or at least the ability to ask for a quote. This would mean that the website can be a one-stop service for consumers so that they don’t have to travel to a shop. It might also be useful to make the navigation bar a drop-down menu so that the top of the website doesn’t become too crowded and it is easier to use. Moreover, I would like to make a completely unique website in its aesthetic, rather than using pre-made templates. This would take too long for this project as I have no experience with making websites from before this, but it would allow for a website that is very personal to the brand and for more customisation. To do this would require doing an online course in website design and coding, as well as drawing out a detailed website design before starting to code it. Finally, including more interactive features for users, such as videos, links and audio clips. This would make the website more of an experience and could allow the user to feel more of a connection with the product.
+                      </p>
                   </div>
               </div>
           </div>
