--- a/index.html
+++ b/index.html
@@ -21,9 +21,6 @@
   <!-- Custom styles for this template -->
   <link href="css/grayscale.min.css" rel="stylesheet">
 
-  <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.0/js/bootstrap.min.js"></script>
-  <script src="//code.jquery.com/jquery-1.11.1.min.js"></script>
-  
 
 <body id="page-top">
 
@@ -291,7 +288,7 @@
           <div class="panel panel-default ">
               <div class="panel-heading accordion-toggle question-toggle collapsed" data-toggle="collapse" data-parent="#websites" data-target="#question0">
                    <h4 class="panel-title">
-                      <a href="#" class="ing">Q: What do you feel makes a good website?</a>
+                      <button href="#" class="ing">Q: What do you feel makes a good website?</button>
                 </h4>
 
               </div>
