--- a/index.html
+++ b/index.html
@@ -299,10 +299,11 @@
                   </div>
               </div>
           </div>
+
           <div class="panel panel-default ">
               <div class="panel-heading accordion-toggle collapsed question-toggle" data-toggle="collapse" data-parent="#websites" data-target="#question1">
                    <h4 class="panel-title">
-                      <a href="#" class="ing">Q: What is accessibility and what considerations should you make for it?</a>
+                      <a href="#question1" class="ing">Q: What is accessibility and what considerations should you make for it?</a>
                 </h4>
 
               </div>
