--- a/index.html
+++ b/index.html
@@ -288,7 +288,7 @@
           <div class="panel panel-default ">
               <div class="panel-heading accordion-toggle question-toggle collapsed" data-toggle="collapse" data-parent="#websites" data-target="#question0">
                    <h4 class="panel-title">
-                      <button href="#" class="ing">Q: What do you feel makes a good website?</button>
+                      <a href="#question0" class="ing">Q: What do you feel makes a good website?</a>
                 </h4>
 
               </div>
@@ -318,7 +318,7 @@
           <div class="panel panel-default ">
               <div class="panel-heading accordion-toggle collapsed question-toggle" data-toggle="collapse" data-parent="#websites" data-target="#question2">
                    <h4 class="panel-title">
-                      <a href="#" class="ing">Q: What is GDPR and what considerations should be made for privacy on your website?</a>
+                      <a href="#question2" class="ing">Q: What is GDPR and what considerations should be made for privacy on your website?</a>
                 </h4>
 
               </div>
@@ -333,7 +333,7 @@
           <div class="panel panel-default ">
               <div class="panel-heading accordion-toggle collapsed question-toggle" data-toggle="collapse" data-parent="#websites" data-target="#question3">
                    <h4 class="panel-title">
-                      <a href="#" class="ing">Q: What marketing steps would you take to drive people to look at your website?</a>
+                      <a href="#question3" class="ing">Q: What marketing steps would you take to drive people to look at your website?</a>
                 </h4>
 
               </div>
@@ -349,7 +349,7 @@
           <div class="panel panel-default ">
               <div class="panel-heading accordion-toggle collapsed question-toggle" data-toggle="collapse" data-parent="#websites" data-target="#question4">
                    <h4 class="panel-title">
-                      <a href="#" class="ing">Q: What are the next steps you would take given more time for your product website - how would you expand and what steps would you take?</a>
+                      <a href="#question4" class="ing">Q: What are the next steps you would take given more time for your product website - how would you expand and what steps would you take?</a>
                 </h4>
 
               </div>
