--- a/index.html
+++ b/index.html
@@ -284,11 +284,11 @@
   </section>
 
   <div class="container ">
-      <div class="panel-group" id="websites">
+      <div class="panel-group" id="faq">
           <div class="panel panel-default ">
-              <div class="panel-heading accordion-toggle question-toggle collapsed" data-toggle="collapse" data-parent="#websites" data-target="#question0">
+              <div class="panel-heading accordion-toggle question-toggle collapsed" data-toggle="collapse" data-parent="#faq" data-target="#question0">
                    <h4 class="panel-title">
-                      <a href="#question0" class="ing">Q: What do you feel makes a good website?</a>
+                      <a href="#websites" class="ing">Q: What do you feel makes a good website?</a>
                 </h4>
 
               </div>
@@ -301,7 +301,7 @@
           </div>
 
           <div class="panel panel-default ">
-              <div class="panel-heading accordion-toggle collapsed question-toggle" data-toggle="collapse" data-parent="#websites" data-target="#question1">
+              <div class="panel-heading accordion-toggle collapsed question-toggle" data-toggle="collapse" data-parent="#faq" data-target="#question1">
                    <h4 class="panel-title">
                       <a href="#question1" class="ing">Q: What is accessibility and what considerations should you make for it?</a>
                 </h4>
@@ -316,7 +316,7 @@
               </div>
           </div>
           <div class="panel panel-default ">
-              <div class="panel-heading accordion-toggle collapsed question-toggle" data-toggle="collapse" data-parent="#websites" data-target="#question2">
+              <div class="panel-heading accordion-toggle collapsed question-toggle" data-toggle="collapse" data-parent="#faq" data-target="#question2">
                    <h4 class="panel-title">
                       <a href="#question2" class="ing">Q: What is GDPR and what considerations should be made for privacy on your website?</a>
                 </h4>
@@ -331,7 +331,7 @@
               </div>
           </div>
           <div class="panel panel-default ">
-              <div class="panel-heading accordion-toggle collapsed question-toggle" data-toggle="collapse" data-parent="#websites" data-target="#question3">
+              <div class="panel-heading accordion-toggle collapsed question-toggle" data-toggle="collapse" data-parent="#faq" data-target="#question3">
                    <h4 class="panel-title">
                       <a href="#question3" class="ing">Q: What marketing steps would you take to drive people to look at your website?</a>
                 </h4>
@@ -347,7 +347,7 @@
           </div>
 
           <div class="panel panel-default ">
-              <div class="panel-heading accordion-toggle collapsed question-toggle" data-toggle="collapse" data-parent="#websites" data-target="#question4">
+              <div class="panel-heading accordion-toggle collapsed question-toggle" data-toggle="collapse" data-parent="#faq" data-target="#question4">
                    <h4 class="panel-title">
                       <a href="#question4" class="ing">Q: What are the next steps you would take given more time for your product website - how would you expand and what steps would you take?</a>
                 </h4>
