--- a/index.html
+++ b/index.html
@@ -164,6 +164,9 @@
             <p class="text-black-50 mb-0">The gin and tonic water are moved around the machine using pumps and silicone tubing. The end of the tubing can simply be placed into the bottles and the precise amount of fluid will be transferred to the glass. This ensures accurate pouring, reducing the costs of wastage and spillage in bars. Using silicone tubing allows consumers to watch the fluid move through the system without using a breakable material, meaning a safer bar-top system.</p>
           </div>
         </div>
+        <div class="col-xl-4 col-lg-5">
+          <div class="featured-text-right" />
+        </div>
         <div class="col-xl-8 col-lg-7">
           <img class="img-fluid mb-3 mb-lg-0" src="img/bg-masthead.jpg" alt="">
         </div>
