--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 
   <!-- Header -->
   <header class="masthead">
-    <div class="container d-flex h-100 align-items-center">
+    <div class="container d-flex h-100 align-items-center col-lg-8">
       <div class="mx-auto text-center">
         <h1 class="mx-auto my-0 text-uppercase">(Gin)fusion</h1>
         <h2 class="text-white-50 mx-auto mt-2 mb-5">The bar-top gin infusing machine.</h2>
