--- a/index.html
+++ b/index.html
@@ -62,8 +62,8 @@
 
   <!-- Header -->
   <header class="masthead">
-    <div class="container d-flex h-100 align-items-center col-lg-8">
-      <div class="mx-auto text-center">
+    <div class="container d-flex h-100 align-items-center">
+      <div class="mx-auto text-center col-lg-8">
         <h1 class="mx-auto my-0 font-size:8vw text-uppercase">(Gin)fusion</h1>
         <h2 class="text-white-50 mx-auto mt-2 mb-5">The bar-top gin infusing machine.</h2>
         <a href="#about" class="btn btn-primary js-scroll-trigger">Start Infusing</a>
