--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
   <header class="masthead">
     <div class="container d-flex h-100 align-items-center">
       <div class="mx-auto text-center col-xl-8 col-lg-7">
-        <h1 class="mx-auto my-0 text-uppercase font-size:2em">(Gin)fusion</h1>
+        <h1 class="mx-auto my-0 text-uppercase mb-4">(Gin)fusion</h1>
         <h2 class="text-white-50 mx-auto mt-2 mb-5">The bar-top gin infusing machine.</h2>
         <a href="#about" class="btn btn-primary js-scroll-trigger">Start Infusing</a>
       </div>
