--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
   <!-- Header -->
   <header class="masthead">
     <div class="container d-flex h-100 align-items-center">
-      <div class="mx-auto text-center col-xl-8 col-lg-7 col-xs-3">
+      <div class="mx-auto text-center col-lg-9">
         <h1 class="mx-auto my-0 text-uppercase">(Gin)fusion</h1>
         <h2 class="text-white-50 mx-auto mt-2 mb-5">The bar-top gin infusing machine.</h2>
         <a href="#about" class="btn btn-primary js-scroll-trigger">Start Infusing</a>
