--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
   </nav>
 
   <!-- Header -->
-  <header class="masthead" style="background-image: url('./img/warm-kitchenjpg')">
+  <header class="masthead" style="background-image: url('./img/warm-kitchen.jpg')">
     <div class="container d-flex h-100 align-items-center">
       <div class="mx-auto text-center col-lg-9">
         <h1 class="mx-auto my-0 text-uppercase">(Gin)fusion</h1>
