--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
     <div class="container d-flex h-100 align-items-center">
       <div class="mx-auto text-center col-lg-9">
         <h1 class="mx-auto my-0 text-uppercase">(Gin)fusion</h1>
-        <h2 class="text-white-50 mx-auto mt-2 mb-5">The bar-top gin infusing machine.</h2>
+        <h2 class="text-black-50 mx-auto mt-2 mb-5">The bar-top gin infusing machine.</h2>
         <a href="#about" class="btn btn-primary js-scroll-trigger">Start Infusing</a>
       </div>
     </div>
