--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
   <header class="masthead" style="background-image: url('./img/warm-kitchen.jpg')">
     <div class="container d-flex h-100 align-items-center">
       <div class="mx-auto text-center col-lg-9">
-        <h1 class="text-primary-bg mx-auto my-0 text-uppercase">(Gin)fusion</h1>
+        <h1 class="mx-auto my-0 text-uppercase">(Gin)fusion</h1>
         <h2 class="text-primary mx-auto mt-2 mb-5">The bar-top gin infusing machine.</h2>
         <a href="#about" class="btn btn-primary js-scroll-trigger">Start Infusing</a>
       </div>
