--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
       <!-- Featured Project Row -->
       <div class="row align-items-center no-gutters mb-4 mb-lg-5">
         <div class="col-xl-8 col-lg-7">
-          <img class="img-fluid mb-3 mb-lg-0" src="img/bg-masthead.jpg" alt="">
+          <img class="img-fluid mb-3 mb-lg-0" src="img/rotational-motion.JPG" alt="">
         </div>
         <div class="col-xl-4 col-lg-5">
           <div class="featured-text text-center text-lg-left">
@@ -123,7 +123,7 @@
       <!-- Project One Row -->
       <div class="row justify-content-center no-gutters mb-lg-0">
         <div class="col-lg-6">
-          <img class="img-fluid" src="img/demo-image-01.jpg" alt="">
+          <img class="img-fluid" src="img/linear-motion.JPG" alt="">
         </div>
         <div class="col-lg-6">
           <div class="bg-black text-center h-100 project">
