alternative text for images

--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
           <p class="text-white-50">We are a group of engineers and scientists who wanted to change the way people drink Gin. Gin is an increasingly popular drink of choice, with the distilleries using copper and glass to create a sophisticated atmosphere. Our vision was to bring the distillery experience to a bar, but without the long waiting times.</p>
         </div>
       </div>
-      <img src="img/inverted.jpg" class="img-fluid" alt="">
+      <img src="img/inverted.jpg" class="img-fluid" alt="diagram of the product layout">
     </div>
   </section>
 
@@ -110,7 +110,7 @@
       <!-- Featured Project Row -->
       <div class="row align-items-center no-gutters mb-4 mb-lg-5">
         <div class="col-xl-8 col-lg-7">
-          <img class="img-fluid mb-3 mb-lg-0" src="img/rotational-motion.jpg" alt="">
+          <img class="img-fluid mb-3 mb-lg-0" src="img/rotational-motion.jpg" alt="image of the motor and gears used to create rotational motion">
         </div>
         <div class="col-xl-4 col-lg-5">
           <div class="featured-text text-center text-lg-left">
@@ -123,7 +123,7 @@
       <!-- Project One Row -->
       <div class="row justify-content-center no-gutters mb-lg-0">
         <div class="col-lg-6">
-          <img class="img-fluid" src="img/linear-motion.jpg" alt="">
+          <img class="img-fluid" src="img/linear-motion.jpg" alt="image of the linear actuator used to create a pushing down motion on the syringes">
         </div>
         <div class="col-lg-6">
           <div class="bg-black text-center h-100 project">
@@ -141,7 +141,7 @@
       <!-- Project Two Row -->
       <div class="row justify-content-center no-gutters">
         <div class="col-lg-6">
-          <img class="img-fluid" src="img/demo-image-02.jpg" alt="">
+          <img class="img-fluid" src="img/demo-image-02.jpg" alt="image of the cooling system used to chill the tonic">
         </div>
         <div class="col-lg-6 order-lg-first">
           <div class="bg-black text-center h-100 project">
@@ -159,7 +159,7 @@
       <!-- Featured Project Row -->
       <div class="row align-items-center no-gutters mb-4 mb-lg-5">
         <div class="col-xl-8 col-lg-7">
-          <img class="img-fluid mb-3 mb-lg-0" src="img/bg-masthead.jpg" alt="">
+          <img class="img-fluid mb-3 mb-lg-0" src="img/bg-masthead.jpg" alt="image of the pumps used to move the gin and tonic through the system">
         </div>
         <div class="col-xl-4 col-lg-5">
           <div class="featured-text text-center text-lg-left">
@@ -186,7 +186,7 @@
       <!-- Team Member 1 -->
       <div class="col-xl-3 col-md-6 mb-4">
         <div class="card border-0 shadow">
-          <img src="https://source.unsplash.com/TMgQMXoglsM/500x350" class="card-img-top" alt="...">
+          <img src="https://source.unsplash.com/TMgQMXoglsM/500x350" class="card-img-top" alt="picture of Ross Unwin, mechanical engineer">
           <div class="card-body text-center">
             <h5 class="card-title mb-0">Ross Unwin</h5>
             <div class="card-text text-black-50">Mechanical Engineer</div>
@@ -196,7 +196,7 @@
       <!-- Team Member 2 -->
       <div class="col-xl-3 col-md-6 mb-4">
         <div class="card border-0 shadow">
-          <img src="https://source.unsplash.com/9UVmlIb0wJU/500x350" class="card-img-top" alt="...">
+          <img src="https://source.unsplash.com/9UVmlIb0wJU/500x350" class="card-img-top" alt="picture of Zoe Hall, mechanical engineer">
           <div class="card-body text-center">
             <h5 class="card-title mb-0">Zoe Hall</h5>
             <div class="card-text text-black-50">Mechanical Engineer</div>
@@ -206,7 +206,7 @@
       <!-- Team Member 3 -->
       <div class="col-xl-3 col-md-6 mb-4">
         <div class="card border-0 shadow">
-          <img src="https://source.unsplash.com/sNut2MqSmds/500x350" class="card-img-top" alt="...">
+          <img src="https://source.unsplash.com/sNut2MqSmds/500x350" class="card-img-top" alt="picture of Piers de Basto, electronics engineer">
           <div class="card-body text-center">
             <h5 class="card-title mb-0">Piers de Basto</h5>
             <div class="card-text text-black-50">Electronics Engineer</div>
@@ -216,7 +216,7 @@
       <!-- Team Member 4 -->
       <div class="col-xl-3 col-md-6 mb-4">
         <div class="card border-0 shadow">
-          <img src="https://source.unsplash.com/ZI6p3i9SbVU/500x350" class="card-img-top" alt="...">
+          <img src="https://source.unsplash.com/ZI6p3i9SbVU/500x350" class="card-img-top" alt="picture of Amy Smith, biomedical scientist">
           <div class="card-body text-center">
             <h5 class="card-title mb-0">Amy Smith</h5>
             <div class="card-text text-black-50">Biomedical Scientist</div>
